[package]
name = "lhtlp"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["crypto, cryptography, timelock, lhtlp"]
categories = ["cryptography"]
description = "An implementation of Linearly Homorphic TimeLock Puzzles (LHTLP) in Rust"
readme = "README.md"

[dependencies]

num-primes = { git = "https://github.com/yamabiiko/num-primes.git", rev = "6e80507fae25bce9075b38cd3106819fc598b142" }
rand = "0.8.5"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer= "0.1.46"
